# ingress-nginx

./: .ct.yaml  .drone-multiarch.yml  .drone.yml  .gitignore  .golangci.yml  .goreleaser.yaml  .luacheckrc  .travis.yml  404.html  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Changelog.md  Changelog.md.gotmpl  Dockerfile.dapper  GINKGO_VERSION  Gopkg.toml  ISSUE_TRIAGE.md  Jenkinsfile  MANUAL_RELEASE.md  Makefile  NEW_CONTRIBUTOR.md  NEW_RELEASE_PROCESS.md  NGINX_BASE  OWNERS  OWNERS_ALIASES  README.adoc  README.md  RELEASE.md  SECURITY.md  SECURITY_CONTACTS  TAG  TESTRUNNER-IMAGE_SHA  VERSION  VERSION_HISTORY.md  cloudbuild.yaml  configuration.md  dummy-ci-test  extra.css  ginkgo_upgrade.md  (+74 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bub_report.yaml  bug_report.md  config.yml  cve_report.md  feature_request.md  support-question.md
.github/workflows/: build.yaml  build_push.yaml  chart.yaml  ci.yaml  ci.yaml1  codeql-analysis.yml  codeql.yml  depreview.yaml  docs.yaml  golangci-lint.yml  helm-release.yml  helm.yaml  images.yaml  junit-reports.yaml  main.yaml  melange-nginx.yaml  nginx125.yaml  opentelemetry.yaml  perftest.yaml  plugin.yaml  project.yml  release-controller.yaml  release.txt  release.yaml  scorecards.yml  stale.yaml  test.yaml  vulnerability-scans.yaml  zz-tmpl-images.yaml  zz-tmpl-k8s-e2e.yaml
.shopify-build/: ingress.yml
.travis/: common.sh  ingress-controller.sh  nginx-slim.sh  nginx.sh  publish-docs.sh  publish.sh  release-from-travis.sh  ubuntu-slim.sh
Godeps/: Godeps.json
assets/javascripts/: application.ac79c3b0.js  application.d9aa80ab.js  bundle.00c583dd.min.js  bundle.00c583dd.min.js.map  vendor.36cbf620.min.js  vendor.36cbf620.min.js.map
assets/stylesheets/: main.89dc9fe3.min.css  main.89dc9fe3.min.css.map  palette.ecd4686e.min.css  palette.ecd4686e.min.css.map
changelog/: Changelog-1.5.2.md  Changelog-1.6.0.md  Changelog-1.6.1.md  Changelog-1.6.2.md  Changelog-1.6.3.md  Changelog-1.6.4.md  Changelog-1.7.1.md  Changelog-1.8.1.md  Changelog-1.8.2.md  Changelog-1.8.4.md  Changelog-1.8.5.md  Changelog-1.9.0-beta.0.md  Changelog-1.9.0.md  Changelog-1.9.1.md  controller-1.10.0.md  controller-1.10.1.md  controller-1.10.2.md  controller-1.10.3.md  controller-1.10.4.md  controller-1.10.5.md  controller-1.10.6.md  controller-1.11.0.md  controller-1.11.1.md  controller-1.11.2.md  controller-1.11.3.md  controller-1.11.4.md  controller-1.11.5.md  controller-1.11.6.md  controller-1.11.7.md  controller-1.11.8.md  controller-1.12.0-beta.0.md  controller-1.12.0.md  controller-1.12.1.md  controller-1.12.2.md  controller-1.12.3.md  controller-1.12.4.md  controller-1.12.5.md  controller-1.12.6.md  controller-1.12.7.md  controller-1.12.8.md  (+32 more)
charts/: Makefile
charts/ingress-nginx/: .helmignore  CHANGELOG.md  Changelog.md  Chart.yaml  OWNERS  README.md  README.md.gotmpl  changelog.md.gotmpl  cloudbuild.yaml  ingress-nginx-4.12.1.tgz  security-mitigation.yaml  values.schema.json  values.yaml
cmd/annotations/: annotations.tmpl  main.go
cmd/dataplane/: Dockerfile  flags.go  main.go
cmd/dbg/: main.go
cmd/grpccli/: main.go
cmd/nginx/: flag_test.go  flags.go  (+7 more)
config/: config.go
controllers/: README.md
deploy/: README.md  configmap.yaml  default-backend.yaml  index.html  mandatory.yaml  namespace.yaml  patch-deployment.yaml  rbac.md  rbac.yaml  tcp-services-configmap.yaml  udp-services-configmap.yaml  validating-webhook.yaml.tpl  with-rbac.yaml  with-validating-webhook.yaml.tpl  without-rbac.yaml
development/: index.html
distroless-build/: Makefile  kind-deploy.yaml
docs/: .pages  OWNERS  README.md  admin.md  annotations.md  catalog.md  deploy.md  developer.md  development.md  e2e-tests.md  extra.css  faq.md  how-it-works.md  index.md  ingress-controller-catalog.md  kubectl-plugin.md  lua_tests.md  rbac.md  requirements.txt  troubleshooting.md
e2e-tests/: index.html
echoheaders/: Dockerfile  Makefile  README.md  echo-app.yaml  nginx.conf
echoheaders-redirect/: Dockerfile  Makefile  README.md  echo-app.yaml  nginx.conf
enhancements/: index.html
examples/: PREREQUISITES.md  README.md  echo-header.yaml  http-svc.yaml  index.html
faq/: index.html
file/: file.go
hack/: .tool-versions  add-namespace.py  build-dev-env.sh  build-single-manifest-sh  changelog.sh  check-go-version.sh  custom-boilerplate.go.txt  e2e.go  e2e_types.go  generate-deploy-scripts.sh  generate-e2e-suite-doc.sh  get-ginkgo-version.sh  ingress_test.go  init-buildx.sh  kube-env.sh  nginx-ingress-controller.yaml  print-e2e-suite.sh  tools.go  update-annotation-doc.sh  update-codegen.sh  update-toc.sh  verify-all.sh  verify-annotation-docs.sh  verify-bindata.sh  verify-chart-lint.sh  verify-codegen.sh  verify-gofmt.sh  verify-golint.sh  verify-lualint.sh
how-it-works/: index.html
images/: Makefile  OWNERS  README.md
images/grpc-fortune-teller/: BUILD.bazel  Gopkg.toml  README.md  WORKSPACE
images/grpc-fortune-teller/app/: BUILD.bazel  main.go
images/grpc-fortune-teller/proto/fortune/: BUILD.bazel  doc.go  fortune.proto
images/opentelemetry/rootfs/: CMakeLists.txt  Dockerfile  build.sh  go.mod  init_module.go  init_module.sh
ingress/: types.go  zz_generated.types.go
ingress-controller-catalog/: index.html
ingressctl/: go.mod  go.sum  main.go
kor/: README.md
kubectl-plugin/: index.html
lua_tests/: index.html
magefiles/: common.go  docker.go  exec.go  go.go  go.mod  go.sum  helm.go  mage.go  release.go  tags.go  yaml.go
net/: net.go
patchs/: patch
rootfs/: .dockerignore  .gitignore  Dockerfile  Dockerfile-chroot  Dockerfile.chroot  Dockerfile.dataplane  Dockerfile.stratio  chroot.sh  entrypoint.sh  nginx-chroot-wrapper.sh
scripts/: build  envs  package  rancher-prepare  test  validate  version
search/: search_index.json
template/: configmap.go  configmap_test.go  template.go  template_test.go
test/: metallb-config.yaml  test-lua.sh
tools/: ginkgo.go
troubleshooting/: index.html
user-guide/: convert_arguments_to_doc.py
version/: version.go
(+2660 files in other folders)
