load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    embed = [":build_stack_fortune_go_proto"],  # keep
    importpath = "github.com/kubernetes/ingress-nginx/images/grpc-fortune-teller/proto/fortune",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "build_stack_fortune_proto",
    srcs = ["fortune.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "build_stack_fortune_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/kubernetes/ingress-nginx/images/grpc-fortune-teller/proto/fortune",
    proto = ":build_stack_fortune_proto",
    visibility = ["//visibility:public"],
)
